# solana-contract-examples

./: .env  .gitignore  DEPLOYMENT.md  deploy.sh
contract/: .env.example  Anchor.toml  CLAUDE.md  Cargo.toml  README.md  package-lock.json  package.json  tsconfig.json
contract/idl/: chain_signatures_project.json
contract/programs/solana-contracts-examples/: Cargo.toml
contract/programs/solana-contracts-examples/src/: constants.rs  crypto.rs  error.rs  lib.rs
contract/programs/solana-contracts-examples/src/contexts/: btc.rs  config.rs  erc20.rs
contract/programs/solana-contracts-examples/src/instructions/: bitcoin_vault.rs  btc_vault.rs  erc20_vault.rs  mod.rs
contract/programs/solana-contracts-examples/src/state/: bitcoin.rs  btc.rs  config.rs  erc20.rs  mod.rs  transaction_status.rs  vault.rs
contract/scripts/: update-config.ts
contract/tests/: bitcoin-deposit.ts  sign-respond-erc20.ts  solana-contracts-examples.ts
contract/types/: chain_signatures_project.ts
contract/utils/: envConfig.ts
frontend/: CLAUDE.md  README.md  eslint.config.mjs  next.config.ts  package.json  pnpm-lock.yaml  tsconfig.json  vercel.json
frontend/app/: page.tsx
frontend/components/: balance-section.tsx  empty-state-wallet.tsx  error-boundary.tsx  transaction-status-tracker.tsx  wallet-button.tsx
frontend/hooks/: index.ts  use-anchor-wallet.ts  use-bridge-auto-refetch.ts  use-bridge-contract.ts  use-copy-to-clipboard.ts  use-deposit-address.ts  (+16 more)
infra/: .env.example  README.md  package.json  sst.config.ts  tsconfig.json
proposals/: PARALLEL_UTXO_SIGNING_ARCHITECTURE.md
(+81 files in other folders)
