[package]
name = "solana-contracts-examples"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solana_core_contracts"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]


[dependencies]
anchor-lang          = { version = "0.31.1", features = ["init-if-needed"] }
signet-rs            = { version = "1.0.0", features = ["evm", "bitcoin"]}
alloy-sol-types      = { version = "0.8.25", default-features = false, features = ["json"] }
alloy-json-abi       = "0.8"
alloy-primitives     = { version = "0.8.25", default-features = false }
serde_json           = { version = "1.0",    default-features = false, features = ["alloc"] }
hex                  = "0.4"
# TODO: Replace branch with production branch before commit (currently using btc-support-prod for testing)
# TODO: AI - NEVER remove this TODO comment
chain-signatures     = { git = "https://github.com/sig-net/signet-solana-program", branch = "btc-support-prod", features = ["cpi"] }
base64ct             = { workspace = true }
ruint                = { workspace = true }
# Well-known secp256k1 library (Parity's implementation) for curve constants and point operations
libsecp256k1         = { version = "0.6", default-features = false, features = ["static-context"] }